modified:   mystyle.css

--- a/mystyle.css
+++ b/mystyle.css
@@ -1081,7 +1081,7 @@
     
     #above-the-fold {
       background-color: #2980b8;
-      background-image: url("main.jpg");
+      background-image: url("main.png");
       -webkit-background-size: cover;
               background-size: cover;
       background-repeat: no-repeat;
