--- a/mystyle.css
+++ b/mystyle.css
@@ -681,6 +681,10 @@
                 background-size: cover;
         background-position: center center;
         background-image: url(images/iloilo1.jpg); }
+
+
+        
+
       .post-card .post-card__details, .post_featured .post-card__details {
         text-align: center;
         padding: 28px;
@@ -758,7 +762,7 @@
         -webkit-background-size: cover;
                 background-size: cover;
         background-position: center center;
-        background-image: url(dahican.png); }
+        background-image: url(media/adventure-albay-clouds-672358.jpg); }
       .post_featured .post_featured__details {
         text-align: center;
         line-height: 1.5rem; }
@@ -817,7 +821,7 @@
         max-width: 100% !important; } }
 
    #post__single-page .post__featured-image1 {
-        background-image: url("media/dahican.jpg");
+        background-image: url("media/dahican.png");
         background-repeat: no-repeat;
         -webkit-background-size: cover;
                 background-size: cover;
@@ -835,7 +839,8 @@
         color: #fff;
         margin-bottom: 55px; }
     #post__single-page .post__featured-image2 {
-        background-image: url("media/apo2.jpg");background-repeat: no-repeat;
+        background-image: url("media/apo2.jpg");
+        background-repeat: no-repeat;
         -webkit-background-size: cover;
                 background-size: cover;
         background-position: center center;
@@ -888,7 +893,7 @@
         color: #fff;
         margin-bottom: 55px; }
     #post__single-page .post__featured-image5 {
-        background-image: url("images/antipolo1.jpg");background-image: url("images/baguiopark.jpg");
+        background-image: url("images/antipolo1.jpg");
         background-repeat: no-repeat;
         -webkit-background-size: cover;
                 background-size: cover;
@@ -906,7 +911,7 @@
         color: #fff;
         margin-bottom: 55px; }
     #post__single-page .post__featured-image6 {
-        background-image: url("images/iloilo1.jpg");background-image: url("images/baguiopark.jpg");
+        background-image: url("images/iloilo1.jpg");
         background-repeat: no-repeat;
         -webkit-background-size: cover;
                 background-size: cover;
@@ -924,8 +929,9 @@
         color: #fff;
         margin-bottom: 55px; }
     
-      #post__single-page .post__featured-image1 .post__featured-image2
-      .post__featured-image3 .post__featured-image4 .post__featured-image5 .post__featured-image6 .post__title-container {
+      #post__single-page .post__featured image .post__featured-image1 .post__featured-image2
+      .post__featured-image3 .post__featured-image4 .post__featured-image5 
+      .post__featured-image6 .post__title-container {
         -webkit-align-self: flex-end;
             -ms-flex-item-align: end;
                 align-self: flex-end;
@@ -957,7 +963,7 @@
         .post__featured-image3 .post__featured-image4 .post__featured-image5 .post__featured-image6 .post__title-container .post__avatar-container {
           padding: 15px; }
           #post__single-page .post__featured-image1 .post__featured-image2
-          .post__featured-image3 .post__featured-image4 .post__featured-image5 .post__featured-image6 .post__title-container .post__avatar-container .post__avatar a {
+        .post__featured-image3 .post__featured-image4 .post__featured-image5 .post__featured-image6 .post__title-container .post__avatar-container .post__avatar a {
             width: 45px;
             height: 45px;
             -webkit-border-radius: 50%;
@@ -968,7 +974,36 @@
             text-indent: -9999px; }
           #post__single-page .post__featured-image1 .post__featured-image2
           .post__featured-image3 .post__featured-image4 .post__featured-image5 .post__featured-image6 .post__title-container .post__avatar-container .post__avatar-name h5 {
-            font-weight: 400; }
+            font-weight: 400; transition: 1s;
+          }
+          .post-card:hover {
+            transform:scale (1.3);
+            background: #dbd2ca;
+            box-shadow: 2px 2px 2px #000;
+            z-index: 2;
+          }
+
+          .post__title-container{
+            align-self: flex-end;
+            -webkit-min-height: 251px;
+            min-height: 400px;
+      
+            width: 100%;
+              text-align: center;
+      
+              -webkit-box-shadow: inset 0 -200px 250px -40px rgba(0, 0, 0, 0.8);
+            box-shadow: inset 0 -200px 250px -40px rgba(0,0,0,.8);
+      
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: column; 
+      
+            
+            }
+             p{
+              font-size: 12px;
+              -webkit-font-weight: 200;
+            }
     
     #post__single-page .post__content {
       max-width: 785px;
@@ -982,14 +1017,54 @@
         margin-bottom: 15px; }
       #post__single-page .post__content h1, #post__single-page .post__content h2, #post__single-page .post__content h3, #post__single-page .post__content h4, #post__single-page .post__content h5, #post__single-page .post__content h6 {
         margin: 25px 0px; }
-      #post__single-page .post__content .post__media_container .post__media_photo {
+       .post__media_photo1 {
         background-color: #2980b8;
-        background-image: url("media/adventure-albay-clouds-672358.jpg");
+        background-image: url("media/dahican2.jpg");
         background-repeat: no-repeat;
         -webkit-background-size: cover;
                  background-size: cover;
         background-position: center center;
         min-height: 450px; }
+         .post__media_photo2 {
+          background-color: #2980b8;
+          background-image: url("media/apo2.jpg");
+          background-repeat: no-repeat;
+          -webkit-background-size: cover;
+                   background-size: cover;
+          background-position: center center;
+          min-height: 450px; }
+           .post__media_photo3 {
+            background-color: #2980b8;
+            background-image: url("media/palawan2.jpg");
+            background-repeat: no-repeat;
+            -webkit-background-size: cover;
+                     background-size: cover;
+            background-position: center center;
+            min-height: 450px; }
+             .post__media_photo4 {
+              background-color: #2980b8;
+              background-image: url("images/baguiocat.jpg");
+              background-repeat: no-repeat;
+              -webkit-background-size: cover;
+                       background-size: cover;
+              background-position: center center;
+              min-height: 450px; }
+               .post__media_photo5 {
+                background-color: #2980b8;
+                background-image: url("images/antipolo2.png");
+                background-repeat: no-repeat;
+                -webkit-background-size: cover;
+                         background-size: cover;
+                background-position: center center;
+                min-height: 450px; }
+                 .post__media_photo6 {
+                  background-color: #2980b8;
+                  background-image: url("images/iloilo2.jpg");
+                  background-repeat: no-repeat;
+                  -webkit-background-size: cover;
+                           background-size: cover;
+                  background-position: center center;
+                  min-height: 450px; }
       #post__single-page .post__content .post__media_container .post__media_caption p {
         text-align: center;
         font-size: 0.875rem; }
