modified:   blog.html 	new file:   images/antipolo12.png 	new file:   images/antipolo13.png 	deleted:    images/baguiolionhead.jpg 	modified:   mystyle.css

--- a/mystyle.css
+++ b/mystyle.css
@@ -662,7 +662,7 @@
         -webkit-background-size: cover;
                 background-size: cover;
         background-position: center center;
-        background-image: url(images/baguiolionhead.jpg); }
+        background-image: url(images/baguiotam.jpg); }
       .post-card .image5, .post_featured .image5 {
         height: 300px;
         width: 100%;
@@ -671,7 +671,7 @@
         -webkit-background-size: cover;
                 background-size: cover;
         background-position: center center;
-        background-image: url(images/antipolo1.jpg); }
+        background-image: url(images/antipolo12.png); }
       .post-card .image6, .post_featured .image6 {
         height: 300px;
         width: 100%;
@@ -680,7 +680,7 @@
         -webkit-background-size: cover;
                 background-size: cover;
         background-position: center center;
-        background-image: url(images/iloilo1.jpg); }
+        background-image: url(images/Iloilo1.png); }
 
 
         
