--- a/mystyle.css
+++ b/mystyle.css
@@ -839,7 +839,7 @@
         color: #fff;
         margin-bottom: 55px; }
     #post__single-page .post__featured-image2 {
-        background-image: url("media/apo2.jpg");
+        background-image: url("media/apo.jpg");
         background-repeat: no-repeat;
         -webkit-background-size: cover;
                 background-size: cover;
@@ -893,7 +893,7 @@
         color: #fff;
         margin-bottom: 55px; }
     #post__single-page .post__featured-image5 {
-        background-image: url("images/antipolo1.jpg");
+        background-image: url("images/antipolo12.png");
         background-repeat: no-repeat;
         -webkit-background-size: cover;
                 background-size: cover;
