--- a/mystyle.css
+++ b/mystyle.css
@@ -1004,6 +1004,8 @@
               font-size: 12px;
               -webkit-font-weight: 200;
             }
+
+            #more {display: none;}
     
     #post__single-page .post__content {
       max-width: 785px;
@@ -1043,12 +1045,13 @@
             min-height: 450px; }
              .post__media_photo4 {
               background-color: #2980b8;
-              background-image: url("images/baguiocat.jpg");
+              background-image: url("images/baguiopar.jpg");
               background-repeat: no-repeat;
               -webkit-background-size: cover;
                        background-size: cover;
               background-position: center center;
-              min-height: 450px; }
+              min-height: 450px;
+              width:100% }
                .post__media_photo5 {
                 background-color: #2980b8;
                 background-image: url("images/antipolo2.png");
