--- a/mystyle.css
+++ b/mystyle.css
@@ -237,18 +237,19 @@
       /* 1 */
       text-transform: none; }
     
-    /**
+    /***
          * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
          *    controls in Android 4.
          * 2. Correct the inability to style clickable types in iOS and Safari.
-         */
+         
     button,
     html [type="button"],
     [type="reset"],
     [type="submit"] {
       -webkit-appearance: button;
-      /* 2 */ }
-    
+      /* 2 */ 
+    /**
+
     button,
     [type="button"],
     [type="reset"],
@@ -256,7 +257,7 @@
       /**
     
            * Restore the focus styles unset by the previous rule.
-           */ }
+           */ 
       button::-moz-focus-inner,
       [type="button"]::-moz-focus-inner,
       [type="reset"]::-moz-focus-inner,
@@ -297,15 +298,15 @@
     /**
          * 1. Correct the odd appearance in Chrome and Safari.
          * 2. Correct the outline style in Safari.
-         */
+        
     [type="search"] {
       -webkit-appearance: textfield;
-      /* 1 */
+      /* 1 
       outline-offset: -2px;
       /* 2 */
       /**
            * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
-           */ }
+           */ 
       [type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
         -webkit-appearance: none; }
     
@@ -1077,7 +1078,7 @@
             }
              p{
               font-size: 12px;
-              -webkit-font-weight: 200;
+              
             }
 
             #more {display: none;}
