modified:   blog.html 	modified:   gallery.html 	modified:   mystyle.css 	modified:   script.min.js

--- a/mystyle.css
+++ b/mystyle.css
@@ -1462,7 +1462,24 @@
         margin: 40px 0px; }
         #blog-list .grid_post_container > div {
           margin-bottom: 0px !important; } }
-    
+
+      .map-responsive{
+          overflow:hidden;
+          padding-bottom:56.25%;
+          position:relative;
+          height:0;
+        
+        }
+        
+        .map-responsive iframe{
+          left:0;
+          top:0;
+          height:100%;
+          width:100%;
+          position:absolute;
+        }
+
+
     footer {
       color: #fff;
       background-color: #2980b8;
